# trd-cli

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  aws.tf  pyproject.toml  requirements.txt  setup.py  variables.tf
.github/workflows/: test.yml
tests/: playground.py  test_cli.py  test_conversions.py  test_main_functions.py  test_redcap_extraction.py
tests/fixtures/: patient.csv  questionnaireresponse.csv  redcap_export.json  tc_data.json  tc_data_initial.json  tc_to_fixture.py
tests/fixtures/initial_tc_dump/: patient.csv  questionnaireresponse.csv
trd_cli/: __init__.py  conversions.py  log_config.py  main.py  main_functions.py  parse_tc.py  questionnaires.py  types.py
