[tool.poetry]
name = "trd-cli"
version = "0.1.0"
description = "Command line utility for syncing True Colours data to REDCap."
authors = ["Matt Jaquiery <matt.jaquiery@dtc.ox.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
